--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-aria-menubutton": "^7.0.3",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-notifications-component": "^3.4.1",
     "react-scripts": "5.0.0",
     "react-svg": "^14.1.9",
@@ -48,7 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-aria-menubutton": "^6.2.9"
+    "@types/react-aria-menubutton": "^6.2.9",
+    "@types/react-modal": "^3.13.1"
   },
   "homepage": "https://blckbry-pi.github.io/numdeduce"
 }
